tests/neg/semantic_unknown_enum_member.baa
// EXPECT: عضو تعداد غير معرّف

تعداد لون { أحمر، أزرق }

صحيح الرئيسية() {
    صحيح س = لون:أخضر.
    إرجع ٠.
}
